--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vineeta AI - Admin Panel</title>
+    <title>Vinita AI - Admin Panel</title>
     <meta name="description" content="Professional admin panel for Vineeta AI - Manage customers, bookings, products and orders" />
     <meta name="author" content="Vineeta AI" />
 
-    <meta property="og:title" content="Vineeta AI - Admin Panel" />
+    <meta property="og:title" content="Vinita AI - Admin Panel" />
     <meta property="og:description" content="Professional admin panel for Vineeta AI - Manage customers, bookings, products and orders" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
