--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vinita AI - Admin Panel</title>
-    <meta name="description" content="Professional admin panel for Vineeta AI - Manage customers, bookings, products and orders" />
-    <meta name="author" content="Vineeta AI" />
+    <meta name="description" content="Professional admin panel for vinita AI - Manage customers, bookings, products and orders" />
+    <meta name="author" content="vinita AI" />
 
     <meta property="og:title" content="Vinita AI - Admin Panel" />
-    <meta property="og:description" content="Professional admin panel for Vineeta AI - Manage customers, bookings, products and orders" />
+    <meta property="og:description" content="Professional admin panel for vinita AI - Manage customers, bookings, products and orders" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
